--- a/Sound_Classification.ipynb
+++ b/Sound_Classification.ipynb
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EYOLPRrNnqnt",
-        "outputId": "321e5c2c-254e-4eb3-af63-a3e61f90ccc8"
+        "outputId": "a5b80de4-8774-444b-82f6-bf224e054a6e"
       },
       "cell_type": "code",
       "outputs": [
@@ -80,7 +80,7 @@
           ]
         }
       ],
-      "execution_count": 25
+      "execution_count": 1
     },
     {
       "cell_type": "code",
@@ -92,18 +92,19 @@
         "import wandb\n",
         "from fastai.callback.wandb import *\n",
         "from dataclasses import dataclass\n",
+        "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "\n",
         "# Define dataclass for hyperparameters\n",
         "@dataclass\n",
         "class HyperParams:\n",
-        "    n_mels: int = 128\n",
+        "    n_mels: int = 64\n",
         "    n_fft: int = 1024\n",
         "    hop_length: int = 512\n",
         "    fmax: int = 8000  # <--- Added to avoid librosa empty filter warning\n",
         "    batch_size: int = 32\n",
         "    image_size: int = 224\n",
         "    architecture: str = \"resnet18\"\n",
-        "    epochs: int = 5\n",
+        "    epochs: int = 8\n",
         "    lr: float = 3e-3\n",
         "    debug_epochs: int = 1\n",
         "    debug_lr: float = 1e-3\n",
@@ -196,12 +197,21 @@
         "interp = ClassificationInterpretation.from_learner(learn)\n",
         "\n",
         "# Plot confusion matrix (and optionally log to wandb)\n",
-        "import matplotlib.pyplot as plt\n",
+        "preds, targs = learn.get_preds()\n",
+        "pred_labels = preds.argmax(dim=1)\n",
+        "vocab = dls.vocab\n",
+        "cm = confusion_matrix(targs, pred_labels)\n",
         "\n",
-        "fig = plt.figure(figsize=(10, 10))\n",
-        "interp.plot_confusion_matrix()\n",
+        "# Plot using sklearn\n",
+        "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=vocab)\n",
+        "fig, ax = plt.subplots(figsize=(10, 10))\n",
+        "disp.plot(ax=ax, xticks_rotation=90, cmap=\"Blues\", colorbar=True)\n",
+        "plt.title(\"Confusion Matrix\")\n",
+        "\n",
+        "# Log to wandb if not debug\n",
         "if not debug:\n",
-        "    wandb.log({\"confusion_matrix\": wandb.Image(fig)})\n",
+        " wandb.log({\"confusion_matrix\": wandb.Image(fig)})\n",
+        "\n",
         "plt.close(fig)\n",
         "\n",
         "# Export model\n",
@@ -222,21 +232,12 @@
         },
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 682
         },
         "id": "YsyjPdu3nqnu",
-        "outputId": "1e52ee60-345d-4faf-ec31-787a8a41ec12"
+        "outputId": "3bb06c1b-e339-4846-8e19-99da5d755192"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Using wandb-core as the SDK backend.  Please refer to https://wandb.me/wandb-core for more information.\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mskj092\u001b[0m to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Using a boolean value for 'reinit' is deprecated. Use 'return_previous' or 'finish_previous' instead.\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -256,7 +257,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Run data is saved locally in <code>/kaggle/working/wandb/run-20250704_092948-xxuwt8kf</code>"
+              "Run data is saved locally in <code>/kaggle/working/wandb/run-20250704_100420-d10q9f9c</code>"
             ]
           },
           "metadata": {}
@@ -268,7 +269,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/skj092/urbansound8k-fastai/runs/xxuwt8kf' target=\"_blank\">mel-spectrogram-cnn</a></strong> to <a href='https://wandb.ai/skj092/urbansound8k-fastai' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+              "Syncing run <strong><a href='https://wandb.ai/skj092/urbansound8k-fastai/runs/d10q9f9c' target=\"_blank\">mel-spectrogram-cnn</a></strong> to <a href='https://wandb.ai/skj092/urbansound8k-fastai' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
             ]
           },
           "metadata": {}
@@ -292,7 +293,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              " View run at <a href='https://wandb.ai/skj092/urbansound8k-fastai/runs/xxuwt8kf' target=\"_blank\">https://wandb.ai/skj092/urbansound8k-fastai/runs/xxuwt8kf</a>"
+              " View run at <a href='https://wandb.ai/skj092/urbansound8k-fastai/runs/d10q9f9c' target=\"_blank\">https://wandb.ai/skj092/urbansound8k-fastai/runs/d10q9f9c</a>"
             ]
           },
           "metadata": {}
@@ -352,10 +353,10 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>0</td>\n",
-              "      <td>1.792422</td>\n",
-              "      <td>1.399345</td>\n",
-              "      <td>0.575866</td>\n",
-              "      <td>01:14</td>\n",
+              "      <td>1.889669</td>\n",
+              "      <td>1.339084</td>\n",
+              "      <td>0.571087</td>\n",
+              "      <td>01:06</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>"
@@ -367,10 +368,6 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
             "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
             "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
             "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
@@ -423,8 +420,8 @@
             "text/html": [
               "\n",
               "    <div>\n",
-              "      <progress value='1' class='' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      20.00% [1/5 01:17&lt;05:08]\n",
+              "      <progress value='0' class='' max='8' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      0.00% [0/8 00:00&lt;?]\n",
               "    </div>\n",
               "    \n",
               "<table border=\"1\" class=\"dataframe\">\n",
@@ -438,19 +435,12 @@
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
-              "    <tr>\n",
-              "      <td>0</td>\n",
-              "      <td>0.981101</td>\n",
-              "      <td>1.106082</td>\n",
-              "      <td>0.686977</td>\n",
-              "      <td>01:17</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table><p>\n",
               "\n",
               "    <div>\n",
-              "      <progress value='8' class='' max='27' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      29.63% [8/27 00:03&lt;00:07 0.7638]\n",
+              "      <progress value='132' class='' max='246' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      53.66% [132/246 00:32&lt;00:28 1.3823]\n",
               "    </div>\n",
               "    "
             ]
@@ -468,32 +458,6 @@
             "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
             "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
             "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
-            "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/librosa/feature/spectral.py:2148: UserWarning: Empty filters detected in mel frequency basis. Some channels will produce empty responses. Try increasing your sampling rate (and fmax) or reducing n_mels.\n",
             "  mel_basis = filters.mel(sr=sr, n_fft=n_fft, **kwargs)\n"
           ]
         }
@@ -504,7 +468,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "EyysnWWfs8mU"
+        "id": "-_u7oeP04TVr"
       },
       "execution_count": null,
       "outputs": []
